# Lab2_khri

./: README.md  newFile
CMake for l22/: CMakeLists.txt
Makefile for l22/: Makefile
l22/: CMakeCache.txt  CMakeLists.txt  L2Cmake  Makefile  cmake_install.cmake  darrayShuffle.c  drandNumber50.c  main.c  rand.h  randandshuffle.h  rez  rezultdyn
